# cpp-github-tutorial

./: .clang-format  .clang-tidy  .codecov.yml  .cppcheck-suppressions  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  README_8md.html  annotated.html  annotated_dup.js  baseline.json  classes.html  classmathlib_1_1Logger-members.html  classmathlib_1_1Logger.html  classmathlib_1_1Logger.js  coverage.info  coverage_filtered.info  current.json  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_func.html  graph_legend.html  index.html  index.js  logger_8cpp.html  logger_8cpp__incl.map  logger_8cpp__incl.md5  logger_8cpp_source.html  logger_8h.html  logger_8h.js  logger_8h__dep__incl.map  logger_8h__dep__incl.md5  logger_8h__incl.map  logger_8h__incl.md5  logger_8h_source.html  mathlib_8cpp.html  (+18 more)
.github/workflows/: ci.yml  release.yml
benchmarks/: CMakeLists.txt  benchmark_mathlib.cpp
coverage_html/: cmd_line  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage_html/src/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  mathlib.cpp.func-c.html  mathlib.cpp.func.html  mathlib.cpp.gcov.html
examples/: example.cpp
scripts/: build-with-vcpkg.sh  check-format.sh  compare_benchmarks.py  create-release.sh  format-code.sh  generate-docs.sh  generate_coverage.sh  publish-docs.sh  setup-vcpkg.sh
search/: all_0.js  all_1.js  all_12.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js
src/: logger.cpp  logger.h  mathlib.cpp  mathlib.h
tests/: CMakeLists.txt  test_basic.cpp  test_main.cpp  test_mathlib.cpp
